# Tasks

./: .clang-format  .envrc  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  CMakeLists.txt  README.md  appveyor.yml  build  compile_commands.json  conanfile.py  doxygen.cmake  flake.nix  index.html  vcpkg.json
.cache/clangd/index/: AllocationTest.cpp.F236B2D44D3D9F72.idx  Bounds.h.070E7B89AFA2E438.idx  GenQPSolver.cpp.9EF697AE80AD3A9F.idx  GenQPSolver.h.8C59A3B549EB05DE.idx  GenQPUtils.h.D671AB77F258BD09.idx  QLDQPSolver.cpp.766001032EE0E443.idx  QLDQPSolver.h.72C61455B365B202.idx  QPCoincidenceConstr.cpp.662E26E1C6C36590.idx  QPCoincidenceConstr.h.E672DE636AFD9EF2.idx  QPConstr.cpp.9A965506B8266AF3.idx  QPConstr.h.324A91F6561640EE.idx  QPContactConstr.cpp.F1AFC651CFB95B8E.idx  QPContactConstr.h.973A932CE194DFC1.idx  QPContacts.cpp.112365FDBA461FE3.idx  QPContacts.h.25A408A124B48AB3.idx  QPMotionConstr.cpp.5C0065D97BA075BC.idx  QPMotionConstr.h.424C8D12678BBE23.idx  QPMultiRobotTest.cpp.29DBF0373C3D842B.idx  QPSolver.cpp.E61F145465DCE983.idx  QPSolver.h.355EBFB80EE2ECA6.idx  QPSolverData.cpp.938449F738E7A5E7.idx  QPSolverData.h.71E8B524D71CEE22.idx  QPSolverTest.cpp.7A338AFE97D12665.idx  QPTasks.cpp.FEE3F200EFF89615.idx  QPTasks.h.6E4F32DA2290805B.idx  Tasks.cpp.EA53B4C2CB7C09F8.idx  Tasks.h.E0B1BAEB6A1598DA.idx  TasksTest.cpp.3AA4DDE024AE1D55.idx  arms.h.41DC3F4A0CB71090.idx  dummy.cpp.8AE8616CC51F5520.idx  qp_wrapper.hpp.CE7A6FF34EB80E18.idx  utils.h.2C7617B237160D39.idx
.github/workflows/: Tasks.recipe  build.yml  clang-format.yml  conan.yml  package.yml
.github/workflows/sources/: package.yml
binding/python/: CMakeLists.txt  SCDAddon.h  SCHAddon.h  __init__.py  __scd_init__.py  __sch_init__.py  generate.py  generate_scd.py  generate_sch.py  setup.in.py
binding/python/include/: qp_wrapper.hpp
binding/python/tasks/: __init__.py  c_tasks.pxd  tasks.pxd  tasks.pyx
binding/python/tasks/qp/: c_qp.pxd  c_qp_private.pxd  qp.pxd  qp.pyx
binding/python/tests/: TestQPMultiRobot.py  TestQPSolver.py  arms.py  test_qp_multi_robot.py  test_qp_solver.py  utils.py
cmake/: README.md  base.cmake  boost.cmake  config.hh.cmake  distcheck.cmake  doxygen.cmake  header.cmake  idl.cmake  pkg-config.cmake  python.cmake  release.cmake  test.cmake  version.cmake
cmake/doxygen/: Doxyfile.in
conan/: CMakeLists.txt
conan/test_package/: conanfile.py  example.cpp  test.py
debian/: changelog  control  copyright  libtasks-lssol-dev.install  libtasks-lssol1.install  libtasks-qld-doc.doc-base  libtasks-qld-doc.lintian-overrides  libtasks-qld1.install  source.lintian-overrides
doc/: Doxyfile.extra.in
doxygen/HEAD/: Bounds_8h.html  Bounds_8h__incl.dot  Bounds_8h__incl.md5  Bounds_8h_source.html  GenQPSolver_8h.html  GenQPSolver_8h.js  GenQPSolver_8h__dep__incl.dot  GenQPSolver_8h__dep__incl.md5  GenQPSolver_8h__incl.dot  GenQPSolver_8h__incl.md5  GenQPSolver_8h_source.html  GenQPUtils_8h.html  GenQPUtils_8h.js  GenQPUtils_8h__incl.dot  GenQPUtils_8h__incl.md5  GenQPUtils_8h_source.html  LSSOLQPSolver_8h.html  LSSOLQPSolver_8h__incl.dot  LSSOLQPSolver_8h__incl.md5  LSSOLQPSolver_8h_source.html  QLDQPSolver_8h.html  QLDQPSolver_8h__incl.dot  QLDQPSolver_8h__incl.md5  QLDQPSolver_8h_source.html  QPConstr_8h.html  QPConstr_8h.js  QPConstr_8h__incl.dot  QPConstr_8h__incl.md5  QPConstr_8h_source.html  QPContactConstr_8h.html  QPContactConstr_8h__incl.dot  QPContactConstr_8h__incl.md5  QPContactConstr_8h_source.html  QPContacts_8h.html  QPContacts_8h__dep__incl.dot  QPContacts_8h__dep__incl.md5  QPContacts_8h__incl.dot  QPContacts_8h__incl.md5  QPContacts_8h_source.html  QPMotionConstr_8h.html  (+1730 more)
doxygen/HEAD/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+129 more)
install/: local_setup.sh  setup.sh
log/: latest_build
src/: Bounds.h  CMakeLists.txt  GenQPSolver.cpp  GenQPSolver.h  GenQPUtils.h  LSSOLQPSolver.cpp  LSSOLQPSolver.h  PGConstr.cpp  PGConstr.h  PGJacobian.cpp  PGJacobian.h  PostureGenerator.cpp  PostureGenerator.h  QL.cpp  QL.f  QL.h  QLDQPSolver.cpp  QLDQPSolver.h  QPCoincidenceConstr.cpp  QPConstr.cpp  QPConstr.h  QPContactConstr.cpp  QPContactConstr.h  QPContacts.cpp  QPContacts.h  QPMotionConstr.cpp  QPMotionConstr.h  QPSolver.cpp  QPSolver.h  QPSolverData.cpp  QPSolverData.h  QPTasks.cpp  QPTasks.h  Tasks.cpp  Tasks.h  utils.h
src/Tasks/: Bounds.h  GenQPSolver.h  QPCoincidenceConstr.h  QPConstr.h  QPContactConstr.h  QPContacts.h  QPMotionConstr.h  QPSolver.h  QPSolverData.h  QPTasks.h  Tasks.h  VariableVarsWeightedLeastSquaresTask.h
tests/: AllocationTest.cpp  CMakeLists.txt  PGJacobianTest.cpp  PGTest.cpp  QPMultiRobotTest.cpp  QPSolverTest.cpp  TasksTest.cpp  arms.h  test_scd.py
